# simple-ets-reader

./: README.md  requirements.txt  setup.cfg
src/ets_reader/: __init__.py  header.py  reader.py
tests/: demo.py
