[metadata]
name = simple_ets
version = file: VERSION
author = gagarinsname
license = GPL-2
description = Python package to parse grayscale video files in ETS format and return frames as Numpy arrays.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = ets, bioformats, microscopy
url = https://github.com/gagarinsname/simple-ets-reader
classifiers =
	Development Status :: 3 - Alpha
	License :: OSI Approved :: GPL-2 License
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	Intended Audience :: Information Technology
	Topic :: Education
	Topic :: Software Development
	Topic :: Software Development :: Libraries
	Private :: Do not Upload

[options]
install_requires = file: requirements.txt

python_requires = >=3.8
package_dir = =src
packages = find:

[options.packages.find]
where = src
